[package]
name = "bitswap-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
litep2p = { git = "https://github.com/paritytech/litep2p.git", branch = "dm-bitswap-client", features = ["websocket", "rsa"] }
log = "0.4.29"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
